# DocMind

./: .gitignore  README.md  docker-compose.yml
docs/: 2026-06-29-lucent-plan.md  2026-06-29-lucent-prd.md
ml/: .env.example  pyproject.toml
ml/lucent_ml/: app.py  models.py  settings.py
ml/lucent_ml/pipeline/: assemble.py  group.py  parse.py  rank.py  reword.py  segment.py
ml/lucent_ml/providers/: api_provider.py  reword_provider.py
ml/tests/: _make_fixture.py  conftest.py  test_api_provider.py  test_assemble.py  test_group.py  test_healthz.py  test_models.py  test_parse.py  test_rank.py  test_reword.py  test_segment.py  test_summarize_e2e.py
web/: package-lock.json  package.json  vitest.config.ts  vitest.setup.ts
web/__tests__/: BeamOverlay.test.tsx  SummaryCard.test.tsx  api.summarize.test.ts  api.test.ts  geometry.test.ts  healthGate.test.tsx  themeGroup.test.tsx
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/health/: route.ts
web/app/api/summarize/: route.ts
web/components/: BeamOverlay.tsx  PdfCanvas.tsx  SummaryCard.tsx  SummaryPanel.tsx  ThemeGroup.tsx  UploadZone.tsx
web/lib/: api.ts  geometry.ts  types.ts  useBeams.ts
