[project]
name = "lucent-ml"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "python-multipart>=0.0.12",
  "pydantic>=2.9",
  "PyMuPDF>=1.24",
  "syntok>=1.4.4",
  "scikit-learn>=1.5",
  "networkx>=3.3",
  "numpy>=1.26",
  "sentence-transformers>=3.0",
  "transformers>=4.44",
  "torch>=2.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "pytest-asyncio>=0.24", "httpx>=0.27", "reportlab>=4.2"]

[tool.pytest.ini_options]
markers = ["slow: tests that load real ML models (deselect with -m 'not slow')"]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["."]
include = ["lucent_ml*"]
